2007-03-13  Jonathan Chambers  <joncham@gmail.com>

	* mono.sln, libmono.vcproj, mono.vcproj, genmdesc.vcproj, winsetup.bat,
	mono/monodiet.vcproj, mono/pedump.vcproj: Move to msvc directory.
	
2007-03-13  Jonathan Chambers  <joncham@gmail.com>

	* libmono.vcproj, mono.vcproj, genmdesc.vcproj, mono/monodiet.vcproj,
	mono/pedump.vcproj: Fix	Release build target, add define to remove CRT warnings, 
	structure output folders a bit better, begin WIN64 port, and change 
	libmono to build a DLL instead	of a static library.
	* mono.sln: Begin x64 target support.
	
Fri Mar 9 18:57:47 CET 2007 Paolo Molaro <lupus@ximian.com>

	* Makefile.am, configure.in, msvc: add msvc directory to the
	distribution.
	* msvc/create-windef.pl, msvc/mono.def: added def file for exported
	functions.

2007-03-09  Zoltan Varga  <vargaz@gmail.com>

	* docs/aot-compiler.txt: Update 'future work'.

2007-03-07  Zoltan Varga  <vargaz@gmail.com>

	* docs/aot-compiler.txt: Add into about the PLT.
	
	* docs/aot-compiler.txt: Update a bit to reflect recent changes.

2007-02-24  Raja R Harinath  <rharinath@novell.com>

	* data/config.in (odbc32.dll) [os=osx]: Fix misplaced ".

2007-02-20  Wade Berrier  <wberrier@novell.com>

	* scripts/Makefile.am: Add api-info and api-diff wrappers

2007-02-15  Marek Habersack  <grendello@gmail.com>

	* data/net_2_0/machine.config: add default provider factories.

2007-02-01  Geoff Norton  <gnorton@customerdna.com>

        * configure.in:  Support NetBSD GC.
		
Thu Feb 1 12:29:23 CET 2007 Paolo Molaro <lupus@ximian.com>

	* configure.in: include LIBS in libmono_ldflags on all archs.
	* mint.pc.in, mono-uninstalled.pc.in, mono.pc.in: removed extra -lm.

2007-02-01  Miguel de Icaza  <miguel@novell.com>

	* configure.in: Naive attempt at getting -ldl in mono.pc

2007-01-31  Marek Habersack  <grendello@gmail.com>

	* data/net_2_0/machine.config: prepare the configuration for the
	Mainsoft.Web administrative application.

2007-01-31  Atsushi Enomoto  <atsushi@ximian.com>
