@@ -1,5 +1,5 @@
 
-EXTRA_DIST=create-windef.pl mono.def README
+EXTRA_DIST=create-windef.pl mono.def README *.vcproj mono.sln
 
 update-def:
 	perl create-windef.pl mono.def
